fix: [CI-2595]: Fixing duration overflow on Builds listing page (#6341)

--- a/src/modules/70-pipeline/components/ExecutionCard/ExecutionCard.module.scss
+++ b/src/modules/70-pipeline/components/ExecutionCard/ExecutionCard.module.scss
@@ -177,12 +177,7 @@ $actions-translate: 10px;
     }
     .footer {
       .timers {
-        width: $timer-width;
-        column-gap: var(--spacing-8);
-
-        & .duration {
-          min-width: 150px;
-        }
+        column-gap: var(--spacing-4);
       }
     }
   }
